--- a/index.ipynb
+++ b/index.ipynb
@@ -10,7 +10,7 @@
     "  - name: Mathieu Thomassin\n",
     "    orcid: 0000-0002-0760-5497\n",
     "    corresponding: true\n",
-    "    email: mathieu.thomassin@inse.fr\n",
+    "    email: mathieu.thomassin@insee.fr\n",
     "    roles:\n",
     "      - Investigation\n",
     "      - Project administration\n",
@@ -38,19 +38,58 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Voici un plan détaillé pour une note intermédiaire pour un rapport de stage en master de data science. Ce plan couvre les grandes parties à inclure pour structurer efficacement votre rapport et fournir une vue d'ensemble claire de votre travail.\n",
+    "#### 1. Introduction\n",
+    "   - **Présentation du Stagiaire et du maître de stage** :\n",
+    "     - stagiaire: Mathieu THOMASSIN\n",
+    "     - maître de stage: Michael ORSUCCI\n",
+    "     - Titre du stage: Machine Learning appliqué à la cybersécurité\n",
+    "### Introduction\n",
+    "   - **Contexte et Objectifs du Stage** : L’Insee a renforcé récemment ses capacités opérationnelles en terme de cybersécurité via notamment la création de son SOC (Security Operation Center) en septembre 2023. Devant la quantité de données et leur diversité et face aux évolutions des techniques et tactiques des attaquants, les méthodes de détection de cyberattaques peuvent avoir des limites. L’application d’algorithmes de Machine Learning peut aider les analystes SOC à repérer des attaques. Se déroulant au sein de l’équipe SOC construite depuis peu, le stage va permettre d’appliquer des techniques de Machine Learning et de deep learning sur des jeux de données réelles, afin de participer à la détection d’incidents de sécurité. Il s'agit d'appliquer des techniques de détection de requêtes malveillantes arrivant dans le SI de l'Insee. Pour cela, un SIEM (Security information and event management), SPLUNK, a été déployé par les membres du SOC au début du stage. Ce système permet de constituer un puit de logs dans lequel puiser des données.\n",
     "\n",
-    "### 1. Introduction\n",
-    "   - **Contexte et Objectifs du Stage** : Décrire l'organisation où le stage a été réalisé, le contexte général du projet, et les objectifs principaux du stage.\n",
     "   - **Présentation de l'entreprise** : Informations sur l'entreprise, son secteur d'activité, sa mission et sa vision.\n",
-    "   - **Problématique et Enjeux** : Définir la problématique abordée lors du stage et les enjeux associés.\n",
+    "\n",
+    "   - **Problématique et Enjeux** : <!---\n",
+    " Définir la problématique abordée lors du stage et les enjeux associés.\n",
+    "-->\n",
+    "\n",
     "\n",
     "### 2. État de l’Art\n",
     "   - **Revue de Littérature** : Synthèse des travaux précédents, articles scientifiques, et technologies utilisées en lien avec la problématique du stage.\n",
+    "\n",
+    "Le SOC étant une nouvelle unité, il n'y a pas eu de travaux sur le sujet en amont. J'ai axé ma recherche bibliogrpahique autour des techniques de machine learning pour la cybersécurité, et autour des techniques de Deep Learning.\n",
+    "\n",
+    "* Livres:\n",
+    "  + An introduction to statistical learning with applications in Python\n",
+    "  + Deep Learning Patterns and Practices, Andrew Ferlitsch\n",
+    "  + Deep Learning from Scratch - Building with Python from first principles, Seth Weidman\n",
+    "  + Deep Learning_ A Visual Approach -- Andrew Glassner -- Illustrated, 2021\n",
+    "  + Machine learning with Python cookbook, Kyle Gallatin & Chris Albon\n",
+    "  + Deep Learning, Ian Goodfellow\n",
+    "  + Machine Learning for cybersecurity, Emmanuel Tsukerman, (Chapter 6 Automatic Intrusion Detection)\n",
+    "  + Machine Learning for computer and Cyber Security, Principles, Algorithms, and Practices, Brij B. Gupta\n",
+    "\n",
+    "* Articles:\n",
+    "  + Isolation Forest, Liu, Ting, Zhou\n",
+    "  + R. Fontugne, P. Borgnat, P. Abry, K. Fukuda. \"MAWILab: Combining diverse anomaly detectors for automated anomaly labeling and performance benchmarking\". ACM CoNEXT 2010. Philadelphia, PA. December 2010. \n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
     "   - **Technologies et Outils** : Présentation des technologies, outils, et bibliothèques couramment utilisés en data science et spécifiques au projet.\n",
+    "\n",
+    "Pour ce projet, j'utilise Python, et des notebook Jupyter, au sein d'environnement hébergés sur la plateforme Onyxia (qui met à dispositio un GPU) ou son équivalent en interne à l'Insee (qui n'en dispose pas). J'utilise les packages classiques de machine learning dont scikit-learn, et les outils associés: TfidfVectorizer, tensorflow, LogisticRegressionLSTM, XGBoost CNN, KFold GridSearchCV.\n",
+    "J'ai également commencé à utiliser l'outil MLFlow, qui est une plateforme permettant de gére le cycle de vie d'un projet de machine learning de bout en bout, notamment les étapes d'expérimentation et d'amélioration continue.\n",
+    "\n",
+    "\n",
+    "![L'approche MLOps](images/mlops.png)\n",
+    "\n",
     "\n",
     "### 3. Méthodologie\n",
     "   - **Collecte de Données** : Sources des données, méthodes de collecte, et description des jeux de données utilisés.\n",
+    "\n",
+    "Les données se classent en deux catégories: les données sur lesquelles les modèles sont entraînés, et les données issues de Splunk.\n",
+    "Pour le moment, j'ai testé différents algorithmes sur un unique jeu de données que je nomme [\"Good-Bad queries\"]<https://github.com/faizann24/Fwaf-Machine-Learning-driven-Web-Application-Firewall.git>\n",
+    "\n",
     "   - **Préparation des Données** : Techniques de nettoyage, transformation, et enrichissement des données.\n",
     "   - **Exploration des Données** : Analyse exploratoire, visualisations, et insights préliminaires obtenus des données.\n",
     "   - **Modélisation** : Description des modèles de machine learning ou autres techniques analytiques utilisés. Justification des choix de modèles.\n",
