note de mi-parcours

--- a/index.ipynb
+++ b/index.ipynb
@@ -38,19 +38,111 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### 1. Introduction\n",
+    "# 1. Introduction\n",
     "   - **Présentation du Stagiaire et du maître de stage** :\n",
     "     - stagiaire: Mathieu THOMASSIN\n",
     "     - maître de stage: Michael ORSUCCI\n",
-    "     - Titre du stage: Machine Learning appliqué à la cybersécurité\n",
-    "### Introduction\n",
-    "   - **Contexte et Objectifs du Stage** : L’Insee a renforcé récemment ses capacités opérationnelles en terme de cybersécurité via notamment la création de son SOC (Security Operation Center) en septembre 2023. Devant la quantité de données et leur diversité et face aux évolutions des techniques et tactiques des attaquants, les méthodes de détection de cyberattaques peuvent avoir des limites. L’application d’algorithmes de Machine Learning peut aider les analystes SOC à repérer des attaques. Se déroulant au sein de l’équipe SOC construite depuis peu, le stage va permettre d’appliquer des techniques de Machine Learning et de deep learning sur des jeux de données réelles, afin de participer à la détection d’incidents de sécurité. Il s'agit d'appliquer des techniques de détection de requêtes malveillantes arrivant dans le SI de l'Insee. Pour cela, un SIEM (Security information and event management), SPLUNK, a été déployé par les membres du SOC au début du stage. Ce système permet de constituer un puit de logs dans lequel puiser des données.\n",
+    "     - Titre du stage: Machine Learning appliqué à la cybersécurité"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Description de la mission\n",
+    "## Environnement de travail:\n",
+    "   - **Présentation de l'organisation** : L’Insee a renforcé récemment ses capacités opérationnelles en terme de cybersécurité via notamment la création de son SOC (Security Operation Center) en septembre 2023. Cette équipe est répartie entre les sites de la DR de Nantes et la DR de Metz et a pour objectif de renforcer la sécurité du SI.\n",
+    "   \n",
+    "   - **Contexte général du stage** : \n",
+    "   Devant la quantité de données et leur diversité et face aux évolutions des techniques et tactiques des attaquants, les méthodes de détection de cyberattaques peuvent avoir des limites. L’application d’algorithmes de Machine Learning peut aider les analystes SOC à repérer des attaques.\n",
+    "   Le stage va permettre d’appliquer des techniques de Machine Learning et de deep learning sur des jeux de données réelles, afin de participer à la détection d’incidents de sécurité. \n",
     "\n",
-    "   - **Présentation de l'entreprise** : Informations sur l'entreprise, son secteur d'activité, sa mission et sa vision.\n",
+    "   - **Problématique et Enjeux** : Il s'agit d'appliquer des techniques de détection de requêtes malveillantes arrivant dans le SI de l'Insee. Les requêtes arrivant au sein du SI peuvent être centralisées par un SIEM (Security information and event management). L'automatisation du traitement de ces données peut aider les membres du SOC à gagner du temps dans leur tâche d'analyse des menaces.\n",
+    "   \n",
+    "   "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "\n",
-    "   - **Problématique et Enjeux** : <!---\n",
-    " Définir la problématique abordée lors du stage et les enjeux associés.\n",
-    "-->\n",
+    "\n",
+    "#### 2. Description de la Mission\n",
+    "   - **Environnement de Travail** :\n",
+    "     - Présentation de l’entreprise ou de l’organisation\n",
+    "     - Contexte général du stage\n",
+    "   - **Objectifs du Stage** :\n",
+    "     - Objectifs principaux\n",
+    "     - Résultats attendus\n",
+    "   - **Enjeux** :\n",
+    "     - Importance de la mission pour l’entreprise\n",
+    "     - Impact potentiel des résultats\n",
+    "\n",
+    "#### 3. Timing Prévisionnel\n",
+    "   - **Calendrier des Étapes** :\n",
+    "     - Détail du planning prévisionnel des différentes phases du projet\n",
+    "     - Échéances importantes et jalons\n",
+    "   - **Avancement Actuel** :\n",
+    "     - Comparaison avec le calendrier initial\n",
+    "     - Retards éventuels et raisons\n",
+    "\n",
+    "#### 4. Méthodologies Utilisées et Prévisionnelles\n",
+    "   - **Collecte de Données** :\n",
+    "     - Sources des données\n",
+    "     - Méthodes de collecte\n",
+    "   - **Préparation et Nettoyage des Données** :\n",
+    "     - Techniques de nettoyage\n",
+    "     - Outils utilisés\n",
+    "   - **Analyse et Modélisation** :\n",
+    "     - Méthodes d’analyse (exploratoire, descriptive)\n",
+    "     - Modèles de machine learning ou autres techniques analytiques envisagées\n",
+    "   - **Évaluation des Modèles** :\n",
+    "     - Métriques de performance prévues\n",
+    "     - Stratégies de validation\n",
+    "\n",
+    "#### 5. État des Travaux\n",
+    "   - **Travaux Réalisés Jusqu’à Présent** :\n",
+    "     - Progrès réalisés\n",
+    "     - Résultats obtenus jusqu’ici\n",
+    "   - **Difficultés Rencontrées** :\n",
+    "     - Problèmes techniques ou méthodologiques\n",
+    "     - Solutions envisagées ou mises en place\n",
+    "   - **Travaux Restants** :\n",
+    "     - Étapes à venir\n",
+    "     - Objectifs pour les prochaines semaines\n",
+    "\n",
+    "#### 6. Bibliographie\n",
+    "   - **Références Utilisées** :\n",
+    "     - Articles scientifiques\n",
+    "     - Livres et manuels\n",
+    "     - Documentation technique\n",
+    "   - **Ressources Additionnelles** :\n",
+    "     - Sites web\n",
+    "     - Outils et bibliothèques spécifiques\n",
+    "\n",
+    "#### 7. Conclusion\n",
+    "   - **Synthèse de l’Avancement** :\n",
+    "     - Résumé des principales réalisations\n",
+    "     - Confirmation du bon déroulement du stage\n",
+    "   - **Perspectives** :\n",
+    "     - Étapes finales du stage\n",
+    "     - Objectifs pour la phase suivante\n",
+    "\n",
+    "### Format et Soumission\n",
+    "   - **Format du Document** :\n",
+    "     - Nommer le fichier suivant le format : « NOM_Prénom_mi_parcours »\n",
+    "   - **Modes de Soumission** :\n",
+    "     - Soumission sur Moodle\n",
+    "     - Envoi par mail à l’enseignant référent\n",
+    "\n",
+    "En suivant ce plan, vous devriez être en mesure de rédiger une note d’étape complète et structurée, respectant les exigences de votre programme de stage. Assurez-vous de respecter la longueur recommandée (2 à 3 pages) en étant concis et précis dans vos descriptions."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "\n",
     "\n",
     "### 2. État de l’Art\n",
