début Timing prévisionnel

--- a/index.ipynb
+++ b/index.ipynb
@@ -38,8 +38,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 1. Introduction\n",
-    "   - **Présentation du Stagiaire et du maître de stage** :\n",
+    "# Introduction\n",
+    "   - **Présentation du stagiaire et du maître de stage** :\n",
     "     - stagiaire: Mathieu THOMASSIN\n",
     "     - maître de stage: Michael ORSUCCI\n",
     "     - Titre du stage: Machine Learning appliqué à la cybersécurité"
@@ -57,7 +57,17 @@
     "   Devant la quantité de données et leur diversité et face aux évolutions des techniques et tactiques des attaquants, les méthodes de détection de cyberattaques peuvent avoir des limites. L’application d’algorithmes de Machine Learning peut aider les analystes SOC à repérer des attaques.\n",
     "   Le stage va permettre d’appliquer des techniques de Machine Learning et de deep learning sur des jeux de données réelles, afin de participer à la détection d’incidents de sécurité. \n",
     "\n",
-    "   - **Problématique et Enjeux** : Il s'agit d'appliquer des techniques de détection de requêtes malveillantes arrivant dans le SI de l'Insee. Les requêtes arrivant au sein du SI peuvent être centralisées par un SIEM (Security information and event management). L'automatisation du traitement de ces données peut aider les membres du SOC à gagner du temps dans leur tâche d'analyse des menaces.\n",
+    "   - **Objectifs du Stage** :\n",
+    "     - Objectifs principaux: l s'agit d'appliquer des techniques de détection de requêtes malveillantes arrivant dans le SI de l'Insee. Les requêtes arrivant au sein du SI peuvent être centralisées par un SIEM (Security information and event management).\n",
+    "     - Résultats attendus:  \n",
+    "         - Offrir un service s'ajoutant au SIEM permettant d'identifier des requêtes malveillantes.\n",
+    "         - Pouvoir comparer différents *meilleurs* modèles (au sens d'une recherche dans les hyper paramètres)  entre eux\n",
+    "         - Favoriser les bonnes pratiques du MLOps: reproductibilité, contrôle de version, automatisation, surveillance, collaboration\n",
+    "         - Étendre la méthodologie à des jeux de données publics différents\n",
+    "         - Explorer les algorithmes de détection d'anomalie\n",
+    "   - **Enjeux** :\n",
+    "     - Importance de la mission pour l’entreprise: à titre d'exemple, l'Insee détient l'application Elire. Une attaque réussie sur cette application perturberait le bon déroulement de la vie démocratique. \n",
+    "     - Impact potentiel des résultats: La détection de requêtes malveillantes pourrait permettre de déjouer une attaque en cours\n",
     "   \n",
     "   "
    ]
@@ -66,26 +76,37 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "\n",
-    "\n",
-    "#### 2. Description de la Mission\n",
-    "   - **Environnement de Travail** :\n",
-    "     - Présentation de l’entreprise ou de l’organisation\n",
-    "     - Contexte général du stage\n",
-    "   - **Objectifs du Stage** :\n",
-    "     - Objectifs principaux\n",
-    "     - Résultats attendus\n",
-    "   - **Enjeux** :\n",
-    "     - Importance de la mission pour l’entreprise\n",
-    "     - Impact potentiel des résultats\n",
-    "\n",
-    "#### 3. Timing Prévisionnel\n",
+    "#### 3. Timing Prévisionnel"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "   - **Calendrier des Étapes** :\n",
     "     - Détail du planning prévisionnel des différentes phases du projet\n",
-    "     - Échéances importantes et jalons\n",
+    "     - Échéances importantes et jalons\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "   - **Avancement Actuel** :\n",
     "     - Comparaison avec le calendrier initial\n",
-    "     - Retards éventuels et raisons\n",
+    "     - Retards éventuels et raisons"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
     "\n",
     "#### 4. Méthodologies Utilisées et Prévisionnelles\n",
     "   - **Collecte de Données** :\n",
