Gantt prévisions et réalisé

--- a/index.ipynb
+++ b/index.ipynb
@@ -85,7 +85,12 @@
    "source": [
     "   - **Calendrier des Étapes** :\n",
     "     - Détail du planning prévisionnel des différentes phases du projet\n",
-    "     - Échéances importantes et jalons\n"
+    "     ![Gantt](images/gantt.png)\n",
+    "     - Échéances importantes et jalons:\n",
+    "        - note intermédiaire (1er juin)\n",
+    "        - être prêt pour tester pendant les élections européennes (8 et 9 juin)\n",
+    "        - surveillance pendant les jeux olympiques (26 juillet au 11 août)\n",
+    "        - rapport final (fin août)\n"
    ]
   },
   {
@@ -93,21 +98,17 @@
    "metadata": {},
    "source": [
     "   - **Avancement Actuel** :\n",
-    "     - Comparaison avec le calendrier initial\n",
-    "     - Retards éventuels et raisons"
+    "     - Comparaison avec le calendrier initial:\n",
+    "        ![Avancement actuel](images/gantt_prevision.png)\n",
+    "\n",
+    "     - Retards éventuels et raisons:\n",
+    "         - Les premiers tests et expérimentations ont eu lieu, cependant, j'ai préféré commencer à comprendre plus en profondeur les design patterns de deep learning ainsi que le fonctionnement de MLFlow avant de pousser davantage la comparaison des modèles et des datasets. MLFLow est notamment conçu pour une bonne comparaison et sélection des meilleurs modèles, dans la perspective d'une intégration avec une mise en production. Je n'utilise donc pour le moment qu'un seul dataset constitué de bonnes et mauvaises requêtes labellisées."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
     "#### 4. Méthodologies Utilisées et Prévisionnelles\n",
     "   - **Collecte de Données** :\n",
     "     - Sources des données\n",
@@ -120,8 +121,13 @@
     "     - Modèles de machine learning ou autres techniques analytiques envisagées\n",
     "   - **Évaluation des Modèles** :\n",
     "     - Métriques de performance prévues\n",
-    "     - Stratégies de validation\n",
-    "\n",
+    "     - Stratégies de validation"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "#### 5. État des Travaux\n",
     "   - **Travaux Réalisés Jusqu’à Présent** :\n",
     "     - Progrès réalisés\n",
@@ -131,24 +137,59 @@
     "     - Solutions envisagées ou mises en place\n",
     "   - **Travaux Restants** :\n",
     "     - Étapes à venir\n",
-    "     - Objectifs pour les prochaines semaines\n",
-    "\n",
+    "     - Objectifs pour les prochaines semaines"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "#### 6. Bibliographie\n",
     "   - **Références Utilisées** :\n",
-    "     - Articles scientifiques\n",
-    "     - Livres et manuels\n",
+    "     - Articles scientifiques:\n",
+    "        + Isolation Forest, Liu, Ting, Zhou\n",
+    "        + R. Fontugne, P. Borgnat, P. Abry, K. Fukuda. \"MAWILab: Combining diverse anomaly detectors for automated anomaly labeling and performance benchmarking\". ACM CoNEXT 2010. Philadelphia, PA. December 2010. \n",
+    "     - Livres et manuels:\n",
+    "         + An introduction to statistical learning with applications in Python\n",
+    "         + Deep Learning Patterns and Practices, Andrew Ferlitsch\n",
+    "         + Deep Learning from Scratch - Building with Python from first principles, Seth Weidman\n",
+    "         + Deep Learning_ A Visual Approach -- Andrew Glassner -- Illustrated, 2021\n",
+    "         + Machine learning with Python cookbook, Kyle Gallatin & Chris Albon\n",
+    "         + Deep Learning, Ian Goodfellow\n",
+    "         + Machine Learning for cybersecurity, Emmanuel Tsukerman, (Chapter 6 Automatic Intrusion Detection)\n",
+    "         + Machine Learning for computer and Cyber Security, Principles, Algorithms, and Practices, Brij B. Gupta\n",
     "     - Documentation technique\n",
     "   - **Ressources Additionnelles** :\n",
     "     - Sites web\n",
     "     - Outils et bibliothèques spécifiques\n",
     "\n",
+    "        - **Revue de Littérature** : Synthèse des travaux précédents, articles scientifiques, et technologies utilisées en lien avec la problématique du stage.\n",
+    "\n",
+    "Le SOC étant une nouvelle unité, il n'y a pas eu de travaux sur le sujet en amont. J'ai axé ma recherche bibliographique autour des techniques de machine learning pour la cybersécurité, et autour des techniques de Deep Learning.\n",
+    "\n",
+    "\n",
+    "\n",
+    "* Articles:\n",
+    "  "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "#### 7. Conclusion\n",
     "   - **Synthèse de l’Avancement** :\n",
     "     - Résumé des principales réalisations\n",
     "     - Confirmation du bon déroulement du stage\n",
     "   - **Perspectives** :\n",
     "     - Étapes finales du stage\n",
-    "     - Objectifs pour la phase suivante\n",
+    "     - Objectifs pour la phase suivante"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "\n",
     "### Format et Soumission\n",
     "   - **Format du Document** :\n",
@@ -169,7 +210,7 @@
     "### 2. État de l’Art\n",
     "   - **Revue de Littérature** : Synthèse des travaux précédents, articles scientifiques, et technologies utilisées en lien avec la problématique du stage.\n",
     "\n",
-    "Le SOC étant une nouvelle unité, il n'y a pas eu de travaux sur le sujet en amont. J'ai axé ma recherche bibliogrpahique autour des techniques de machine learning pour la cybersécurité, et autour des techniques de Deep Learning.\n",
+    "Le SOC étant une nouvelle unité, il n'y a pas eu de travaux sur le sujet en amont. J'ai axé ma recherche bibliographique autour des techniques de machine learning pour la cybersécurité, et autour des techniques de Deep Learning.\n",
     "\n",
     "* Livres:\n",
     "  + An introduction to statistical learning with applications in Python\n",
