--- a/index.ipynb
+++ b/index.ipynb
@@ -85,7 +85,7 @@
    "source": [
     "   - **Calendrier des Étapes** :\n",
     "     - Détail du planning prévisionnel des différentes phases du projet\n",
-    "     ![Gantt](images/gantt.png)\n",
+    "     ![Gantt](images/gantt_prevision.png)\n",
     "     - Échéances importantes et jalons:\n",
     "        - note intermédiaire (1er juin)\n",
     "        - être prêt pour tester pendant les élections européennes (8 et 9 juin)\n",
@@ -99,7 +99,7 @@
    "source": [
     "   - **Avancement Actuel** :\n",
     "     - Comparaison avec le calendrier initial:\n",
-    "        ![Avancement actuel](images/gantt_prevision.png)\n",
+    "        ![Avancement actuel](images/gantt_realise.png)\n",
     "\n",
     "     - Retards éventuels et raisons:\n",
     "         - Les premiers tests et expérimentations ont eu lieu, cependant, j'ai préféré commencer à comprendre plus en profondeur les design patterns de deep learning ainsi que le fonctionnement de MLFlow avant de pousser davantage la comparaison des modèles et des datasets. MLFLow est notamment conçu pour une bonne comparaison et sélection des meilleurs modèles, dans la perspective d'une intégration avec une mise en production. Je n'utilise donc pour le moment qu'un seul dataset constitué de bonnes et mauvaises requêtes labellisées."
