--- a/index.ipynb
+++ b/index.ipynb
@@ -6,6 +6,7 @@
    "source": [
     "---\n",
     "title: Note intermédiaire rapport de stage\n",
+    "\n",
     "author:\n",
     "  - name: Mathieu Thomassin\n",
     "    orcid: 0000-0002-0760-5497\n",
@@ -38,7 +39,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Introduction\n",
+    "## Introduction\n",
     "   - **Présentation du stagiaire et du maître de stage** :\n",
     "     - stagiaire: Mathieu THOMASSIN\n",
     "     - maître de stage: Michael ORSUCCI\n",
@@ -49,25 +50,27 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Description de la mission\n",
-    "## Environnement de travail:\n",
-    "   - **Présentation de l'organisation** : L’Insee a renforcé récemment ses capacités opérationnelles en terme de cybersécurité via notamment la création de son SOC (Security Operation Center) en septembre 2023. Cette équipe est répartie entre les sites de la DR de Nantes et la DR de Metz et a pour objectif de renforcer la sécurité du SI.\n",
-    "   \n",
-    "   - **Contexte général du stage** : \n",
-    "   Devant la quantité de données et leur diversité et face aux évolutions des techniques et tactiques des attaquants, les méthodes de détection de cyberattaques peuvent avoir des limites. L’application d’algorithmes de Machine Learning peut aider les analystes SOC à repérer des attaques.\n",
-    "   Le stage va permettre d’appliquer des techniques de Machine Learning et de deep learning sur des jeux de données réelles, afin de participer à la détection d’incidents de sécurité. \n",
+    "## Description de la mission\n",
+    "   * **Environnement de travail**:\n",
+    "      - *Présentation de l'organisation* : L’Insee a renforcé récemment ses capacités opérationnelles en terme de cybersécurité via notamment la création de son SOC (Security Operation Center) en septembre 2023. Cette équipe est répartie entre les sites de la DR de Nantes et la DR de Metz et a pour objectif de renforcer la sécurité du SI.\n",
+    "      \n",
+    "      - *Contexte général du stage*: Devant la quantité de données et leur diversité et face aux évolutions des techniques et tactiques des attaquants, les méthodes de détection de cyberattaques peuvent avoir des limites. L’application d’algorithmes de Machine Learning peut aider les analystes SOC à repérer des attaques. \n",
+    "      Le stage va permettre d’appliquer des techniques de Machine Learning et de deep learning sur des jeux de données réelles, afin de participer à la détection d’incidents de sécurité. \n",
     "\n",
-    "   - **Objectifs du Stage** :\n",
-    "     - Objectifs principaux: l s'agit d'appliquer des techniques de détection de requêtes malveillantes arrivant dans le SI de l'Insee. Les requêtes arrivant au sein du SI peuvent être centralisées par un SIEM (Security information and event management).\n",
-    "     - Résultats attendus:  \n",
+    "  * **Objectifs du Stage** :\n",
+    "     - *Objectifs principaux*: Il s'agit d'appliquer des techniques de détection de requêtes malveillantes arrivant dans le SI de l'Insee. Les requêtes arrivant au sein du SI peuvent être centralisées par un SIEM (Security information and event management).\n",
+    "     \n",
+    "     - *Résultats attendus*:  \n",
     "         - Offrir un service s'ajoutant au SIEM permettant d'identifier des requêtes malveillantes.\n",
     "         - Pouvoir comparer différents *meilleurs* modèles (au sens d'une recherche dans les hyper paramètres)  entre eux\n",
     "         - Favoriser les bonnes pratiques du MLOps: reproductibilité, contrôle de version, automatisation, surveillance, collaboration\n",
     "         - Étendre la méthodologie à des jeux de données publics différents\n",
     "         - Explorer les algorithmes de détection d'anomalie\n",
-    "   - **Enjeux** :\n",
-    "     - Importance de la mission pour l’entreprise: à titre d'exemple, l'Insee détient l'application Elire. Une attaque réussie sur cette application perturberait le bon déroulement de la vie démocratique. \n",
-    "     - Impact potentiel des résultats: La détection de requêtes malveillantes pourrait permettre de déjouer une attaque en cours\n",
+    "         \n",
+    "  * **Enjeux** :\n",
+    "      * *Importance de la mission pour l'Insee*: à titre d'exemple, l'Insee détient l'application Elire. Une attaque réussie sur cette application perturberait le bon déroulement de la vie démocratique. \n",
+    "      * *Impact potentiel des résultats*: \n",
+    "        - La détection de requêtes malveillantes pourrait permettre de déjouer une attaque en cours.\n",
     "   \n",
     "   "
    ]
@@ -76,13 +79,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### 3. Timing Prévisionnel"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "## 3. Timing Prévisionnel\n",
+    "\n",
     "   - **Calendrier des Étapes** :\n",
     "     - Détail du planning prévisionnel des différentes phases du projet\n",
     "     ![Gantt](images/gantt_prevision.png)\n",
@@ -90,34 +88,75 @@
     "        - note intermédiaire (1er juin)\n",
     "        - être prêt pour tester pendant les élections européennes (8 et 9 juin)\n",
     "        - surveillance pendant les jeux olympiques (26 juillet au 11 août)\n",
-    "        - rapport final (fin août)\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "        - rapport final (fin août)\n",
+    "        \n",
     "   - **Avancement Actuel** :\n",
     "     - Comparaison avec le calendrier initial:\n",
     "        ![Avancement actuel](images/gantt_realise.png)\n",
     "\n",
     "     - Retards éventuels et raisons:\n",
-    "         - Les premiers tests et expérimentations ont eu lieu, cependant, j'ai préféré commencer à comprendre plus en profondeur les design patterns de deep learning ainsi que le fonctionnement de MLFlow avant de pousser davantage la comparaison des modèles et des datasets. MLFLow est notamment conçu pour une bonne comparaison et sélection des meilleurs modèles, dans la perspective d'une intégration avec une mise en production. Je n'utilise donc pour le moment qu'un seul dataset constitué de bonnes et mauvaises requêtes labellisées."
+    "         - Les premiers tests et expérimentations ont eu lieu, cependant, j'ai préféré commencer à comprendre plus en profondeur les design patterns de deep learning ainsi que le fonctionnement de MLFlow avant de pousser davantage la comparaison des modèles et des datasets. MLFLow va permettre une bonne méthode de comparaison et de sélection des meilleurs modèles, dans la perspective d'une intégration avec une mise en production. \n",
+    "\n",
+    "         Je n'utilise donc pour le moment qu'un seul dataset constitué de bonnes et mauvaises requêtes labellisées, un seul modèle (sur plusieurs déjà entraînés).\n",
+    "         \n",
+    "         Je n'ai pas encore terminé l'intégration sur MLFlow."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### 4. Méthodologies Utilisées et Prévisionnelles\n",
-    "   - **Collecte de Données** :\n",
-    "     - Sources des données\n",
-    "     - Méthodes de collecte\n",
-    "   - **Préparation et Nettoyage des Données** :\n",
-    "     - Techniques de nettoyage\n",
-    "     - Outils utilisés\n",
-    "   - **Analyse et Modélisation** :\n",
-    "     - Méthodes d’analyse (exploratoire, descriptive)\n",
+    "## 4. Méthodologies Utilisées et Prévisionnelles\n",
+    "  - [Dépôt](https://github.com/WolfPackStatMathieu/ml-dl-cyber.git) GitHub du code source\n",
+    "  \n",
+    "  - **Collecte de Données** :\n",
+    "     - Sources des données: \n",
+    "        + dataset public pour l'entraînement des modèles:\n",
+    "            - http://www.secrepo.com/#\n",
+    "            - https://www.netresec.com/index.ashx?page=PcapFiles\n",
+    "            - https://www.stratosphereips.org/datasets-overview\n",
+    "            - [description des datasets](https://medium.com/@dylan.d.zheng/)\n",
+    "            - datasets-for-network-security-e25238704c7f\n",
+    "            - [dépôt github contenant des liens vers plusieurs datasets](https://github.com/jivoi/awesome-ml-for-cybersecurity?tab=readme-ov-file)\n",
+    "            - [Good et Bad queries dataset](https://github.com/faizann24/Fwaf-Machine-Learning-driven-Web-Application-Firewall/tree/master)\n",
+    "        + données issues du SIEM, soit le POC en cours (fin mai) soit potentiellement le SIEM qui sera mis en place \n",
+    "     - Méthodes de collecte:\n",
+    "        + téléchargement à partir des liens\n",
+    "        + téléchargement au format Json à partir d'une recherche dans Splunk. Il serait souhaitable de réussir à utiliser l'API du SIEM afin d'automatiser cette tâche et de reproduire les résultats.\n",
+    "        \n",
+    "  - **Préparation et Nettoyage des Données** :\n",
+    "    + **Lecture des fichiers de requêtes**, étiquetage en fonction de leur nature (bonne ou mauvaise) et concaténation dans un DataFrame.\n",
+    "\n",
+    "    + **Étiquetage des données** :   - Les données sont lues à partir de fichiers texte et chaque ligne est étiquetée comme étant soit une mauvaise requête (1) soit une bonne requête (0)\n",
+    "\n",
+    "    + **Séparation des ensembles d'entraînement et de test** :\n",
+    "          - Les données étiquetées sont divisées en deux ensembles : un ensemble d'entraînement (80%) et un ensemble de test (20%).\n",
+    "\n",
+    "    + **Tokenisation personnalisée** :\n",
+    "      - Une fonction de tokenisation personnalisée utilise des expressions régulières pour extraire des tokens pertinents des requêtes, y compris les mots, les chiffres, les URL et certains caractères spéciaux.\n",
+    "\n",
+    "    + **Vectorisation TF-IDF** :\n",
+    "          - Les données textuelles sont transformées en matrices de caractéristiques en utilisant la vectorisation TF-IDF.\n",
+    "          \n",
+    "  - **Analyse et Modélisation** :\n",
+    "      - **Extraction des caractéristiques** :\n",
+    "        - Une fonction `extract_features` est définie pour extraire les parties importantes des requêtes, en particulier les noms de scripts ou de fichiers ciblés.\n",
+    "              \n",
+    "        - Les données sont nettoyées pour éliminer les caractères non désirés et les retours à la ligne, puis les scripts/fichiers sont extraits et ajoutés dans une nouvelle colonne Script du DataFrame.\n",
+    "            \n",
+    "      - **Statistiques descriptives** :\n",
+    "      \n",
+    "![Les 20 scripts/fichiers les plus fréquents sont affichés](images/Fréquence%20des%20fichiers%20scripts%20ciblés.png)\n",
+    "\n",
+    "![Types de vulnérabilités exploitées](images/Types%20de%20vulnérabilités%20exploitées.png)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\n",
     "     - Modèles de machine learning ou autres techniques analytiques envisagées\n",
     "   - **Évaluation des Modèles** :\n",
     "     - Métriques de performance prévues\n",
@@ -145,6 +184,8 @@
    "metadata": {},
    "source": [
     "#### 6. Bibliographie\n",
+    "Le SOC étant une nouvelle unité, il n'y a pas eu de travaux sur le sujet en amont. J'ai axé ma recherche bibliographique autour des techniques de machine learning pour la cybersécurité, et autour des techniques de Deep Learning.\n",
+    "\n",
     "   - **Références Utilisées** :\n",
     "     - Articles scientifiques:\n",
     "        + Isolation Forest, Liu, Ting, Zhou\n",
@@ -161,11 +202,13 @@
     "     - Documentation technique\n",
     "   - **Ressources Additionnelles** :\n",
     "     - Sites web\n",
+    "         + [Scikit-Learn](https://scikit-learn.org/stable/user_guide.html#user-guide)\n",
+    "\n",
     "     - Outils et bibliothèques spécifiques\n",
+    "         + [Splunk](https://www.splunk.com/fr_fr)\n",
     "\n",
-    "        - **Revue de Littérature** : Synthèse des travaux précédents, articles scientifiques, et technologies utilisées en lien avec la problématique du stage.\n",
     "\n",
-    "Le SOC étant une nouvelle unité, il n'y a pas eu de travaux sur le sujet en amont. J'ai axé ma recherche bibliographique autour des techniques de machine learning pour la cybersécurité, et autour des techniques de Deep Learning.\n",
+    "\n",
     "\n",
     "\n",
     "\n",
